# zraw-developer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_RULESET_SETUP.md  GITHUB_SETUP.md  LICENSE  README.md  SETUP_SUMMARY.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/adjustments/: ContrastAdjustment.cpp  ContrastAdjustment.h  ExposureAdjustment.cpp  ExposureAdjustment.h  SharpnessAdjustment.cpp  SharpnessAdjustment.h
src/core/: CLIHandler.cpp  CLIHandler.h  ImageBuffer.cpp  ImageBuffer.h  ImageExporter.cpp  ImageExporter.h  RawProcessor.cpp  RawProcessor.h  XMPHandler.cpp  XMPHandler.h
src/gpu/: GLContext.cpp  GLContext.h  GPUPipeline.cpp  GPUPipeline.h  ShaderProgram.cpp  ShaderProgram.h
src/ui/: AdjustmentPanel.cpp  AdjustmentPanel.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  ResettableSlider.cpp  ResettableSlider.h
